ircv3_parse_derive/tests/ui/fail/02_unsupported_data_fail.rs
use ircv3_parse_derive::FromMessage;

#[derive(FromMessage)]
enum M1 {
    Field,
}

#[derive(FromMessage)]
struct M2(String);

#[derive(FromMessage)]
struct M3;

fn main() {}
